other/policy-for-exceptions/.chainsaw-test/policy-bad.yaml
apiVersion: kyverno.io/v2beta1
kind: PolicyException
metadata:
  name: badpe01
spec:
  exceptions:
  - policyName: policy01
    ruleNames:
    - rule01
  - policyName: policy02
    ruleNames:
    - rule02
  match: {}
---
apiVersion: kyverno.io/v2beta1
kind: PolicyException
metadata:
  name: badpe02
  namespace: policy-exceptions-ns
spec:
  background: false
  exceptions:
  - policyName: policy01
    ruleNames:
    - rule01
  match:
    any:
    - resources:
        namespaces:
        - policy-exceptions-ns
      subjects:
      - kind: ServiceAccount
        namespace: some-ns
        name: kube-admin
---
apiVersion: kyverno.io/v2beta1
kind: PolicyException
metadata:
  name: badpe03
  namespace: policy-exceptions-ns
spec:
  background: false
  exceptions:
  - policyName: policy01
    ruleNames:
    - rule01
  match:
    any:
    - resources:
        names:
        - foo
      subjects:
      - kind: ServiceAccount
        namespace: some-ns
        name: kube-admin
---
apiVersion: kyverno.io/v2beta1
kind: PolicyException
metadata:
  name: badpe04
  namespace: policy-exceptions-ns
spec:
  background: false
  exceptions:
  - policyName: policy01
    ruleNames:
    - rule01
  match:
    any:
    - resources:
        names:
        - foo
        namespaces:
        - policy-exceptions-not-ns
      subjects:
      - kind: ServiceAccount
        namespace: some-ns
        name: kube-admin
---
apiVersion: kyverno.io/v2beta1
kind: PolicyException
metadata:
  name: badpe05
  namespace: policy-exceptions-ns
spec:
  background: false
  exceptions:
  - policyName: policy01
    ruleNames:
    - rule01
  match:
    any:
    - resources:
        names:
        - foo
        namespaces:
        - policy-exceptions-ns
---
apiVersion: kyverno.io/v2beta1
kind: PolicyException
metadata:
  name: badpe06
  namespace: policy-exceptions-ns
spec:
  exceptions:
  - policyName: not-policy-exceptions-ns/policy01
    ruleNames:
    - rule01
  match: {}
