other/policy-for-exceptions/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: policy-for-exceptions
status:
  ready: true
